--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,django,visualstudiocode,venv,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,django,visualstudiocode,venv,python
-
+.DS_Store
+.env
 ### Django ###
 *.log
 *.pot
