--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,django,visualstudiocode,venv,python
+
+
+my_settings.py
