--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ autopep8==1.5.7
 cffi==1.14.6
 cryptography==3.4.7
 Django==3.2.6
+django-summernote==0.8.11.6
+jamo==0.4.1
+Pillow==8.3.1
 pycodestyle==2.7.0
 pycparser==2.20
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
-jamo==0.4.1
 toml==0.10.2
-Pillow==8.3.1
+whitenoise==5.3.0
