시크릿키 변경 및 숨기기

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,django,visualstudiocode,venv,python
 .DS_Store
 .env
+secrets.json
 ### Django ###
 *.log
 *.pot
